dnl Process this file with autoconf to produce a configure script.
AC_INIT(gdbm_delete.c)

AM_INIT_AUTOMAKE(gvs_tools, v1.6)
AM_CONFIG_HEADER(config.h)

dnl Default for GVS and friends.
AC_PREFIX_DEFAULT(/usr/local/trmm/GVBOX)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROGS(perlbin,perl)

dnl Checks for libraries.
if test $prefix = NONE; then
  prefix=$ac_default_prefix
fi
LIBDIR="-L$prefix/lib -L/usr/local/lib"

AC_CHECK_LIB(gdbm, gdbm_open,,,$LIBDIR)
LIBS="$LIBDIR $LIBS"

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile)
